import("//tools/grit/grit_rule.gni")

group("pdf_viewer") {
  deps = [
    ":pdf_viewer_build"
  ]
}

grit("pdf_viewer_build") {
  source = "resources.grd"
  outputs = [
    "pdf_viewer_resources.h",
    "pdf_viewer_resources_map.cc",
    "pdf_viewer_resources_map.h",
    "pdf_viewer_resources.pak",
  ]
  resource_ids = ""
}
